詳細入力画面へ遷移した場合にはツールバーを検索アイコンから完了アイコンに変更する

--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -2,8 +2,15 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/search_menu_search_view"
+        android:id="@+id/menu_search_view"
         app:actionViewClass="androidx.appcompat.widget.SearchView"
         app:showAsAction="always"
+        android:visible="true"
         android:title="Search Bar" />
+    <item
+        android:id="@+id/menu_done_button"
+        android:icon="@drawable/ic_baseline_check_24"
+        app:showAsAction="always"
+        android:visible="false"
+        android:title="Done" />
 </menu>
