--- a/app/src/main/res/layout/fragment_item_detail.xml
+++ b/app/src/main/res/layout/fragment_item_detail.xml
@@ -24,10 +24,10 @@
 
         <EditText
             android:layout_width="match_parent"
-            android:layout_height="20dp"
+            android:layout_height="30dp"
             android:id="@+id/detail_subtitle"
             android:text="サブ銘柄名"
-            android:textSize="12dp"
+            android:textSize="18dp"
             android:background="@color/offwhite"
             android:layout_marginTop="4dp"
             android:layout_marginLeft="10dp"
@@ -118,7 +118,7 @@
             <EditText
                 android:layout_width="0dp"
                 android:layout_height="50dp"
-                android:id="@+id/detail_sake_shop"
+                android:id="@+id/detail_brewery"
                 android:layout_weight="2"
                 android:text="酒蔵名"
                 android:inputType="text"/>
