--- a/app/src/main/res/layout/fragment_item_detail.xml
+++ b/app/src/main/res/layout/fragment_item_detail.xml
@@ -137,43 +137,19 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="50dp"
-                android:id="@+id/detail_origin_title"
+                android:id="@+id/detail_area_title"
                 android:layout_weight="1"
                 android:gravity="center_vertical"
                 android:text="産地"
                 android:textSize="14dp" />
 
-            <Spinner
+            <EditText
                 android:layout_width="0dp"
                 android:layout_height="50dp"
-                android:id="@+id/detail_origin"
-                android:layout_weight="2" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:background="@color/offwhite"
-            android:layout_marginTop="4dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp">
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="50dp"
-                android:id="@+id/detail_manufacturing_title"
-                android:layout_weight="1"
-                android:gravity="center_vertical"
-                android:text="製法"
-                android:textSize="14dp" />
-
-            <Spinner
-                android:layout_width="0dp"
-                android:layout_height="50dp"
-                android:id="@+id/detail_manufacturing"
-                android:layout_weight="2" />
+                android:id="@+id/detail_area"
+                android:layout_weight="2"
+                android:text="県名"
+                android:inputType="text"/>
 
         </LinearLayout>
 
