--- a/app/src/main/res/layout/fragment_search_list.xml
+++ b/app/src/main/res/layout/fragment_search_list.xml
@@ -21,6 +21,7 @@
             android:textSize="24dp"
             android:background="@color/offwhite"
             android:visibility="gone"
+            android:inputType="text"
             android:layout_marginTop="4dp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp" />
